--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@ button.girl:hover {
       canvas.height = window.innerHeight;
     });
   </script>
+<!-- Music during countdown -->
+<audio id="background-music" src="background.mp3" loop></audio>
+
+<!-- Music for reveal -->
+<audio id="reveal-music" src="reveal.mp3"></audio>
 
   <!-- ✅ Firebase SDK (correct order!) -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
