--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ button.girl:hover {
 </style>
 </head>
 <body>
+<div id="countdown"></div>
 <!-- 3-2-1 Countdown Overlay -->
 <div id="countdown-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:#000000d9; color:white; font-size:5rem; display:flex; justify-content:center; align-items:center; z-index:9999;"></div>
 
@@ -89,7 +90,12 @@ button.girl:hover {
 
 <div id="poll-results" style="display:none;"></div>
   <canvas id="confetti"></canvas>
-  <script>
+  <!-- 🔊 Background music (looped) -->
+<audio id="background-music" src="background.mp3" loop></audio>
+
+<!-- 🔊 Reveal music -->
+<audio id="reveal-music" src="reveal.mp3"></audio>
+<script>
   // Wait for the page to load
   window.onload = () => {
     const backgroundMusic = document.getElementById("background-music");
